[tool.poetry]
name = "ynabi"
version = "1.0.0"
description = "Import bank transactions to YNAB."
authors = ["Andreas Skielboe <skielboe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
